# chunkmap-studio

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
cli/: CMakeLists.txt
cli/src/: cli_app.cpp  cli_app.h  command_parser.cpp  command_parser.h  main.cpp
desktop/: CMakeLists.txt
desktop/src/: app.cpp  app.h  concept_comparison_state.h  desktop_command_host.cpp  desktop_command_host.h  gl_texture.cpp  gl_texture.h  main.cpp  map_zoom_state.h
docs/: CHUNK_WRITE_REGISTRATION_RESTORATION_DESIGN.md  CODE_ARCHITECTURE_DESIGN.md  DEMO_VIDEO_PRODUCTION_PLAN.md  DESKTOP_CLI_UX_FLOW.md  FULL_MAP_EXPORT_DESIGN.md  GLOBAL_PROMPT_DESIGN.md  IN_MEMORY_DOCUMENT_RENDERING_PLAN.md  MENU_BAR_PLAN.md  PHASE6_COMMAND_DISPATCHER_DESIGN.md  PROMPT_AUTHORING_GUIDE.md  README.md  SOURCE_READING_GUIDE.md
docs/historical/: DESKTOP_CLI_UX_FLOW.md  FULL_MAP_EXPORT_DESIGN.md  GLOBAL_PROMPT_DESIGN.md  IN_MEMORY_DOCUMENT_RENDERING_PLAN.md  MENU_BAR_PLAN.md  PHASE6_COMMAND_DISPATCHER_DESIGN.md  README.md
src/: CMakeLists.txt
src/command/: command_codec.cpp  command_codec.h  command_dispatcher.cpp  command_dispatcher.h  command_request.cpp  command_request.h  command_result.cpp  command_result.h  document_command_queue.cpp  document_command_queue.h
src/core/: result.h  version.cpp  version.h
src/image/: composite_builder.cpp  composite_builder.h  full_map_exporter.cpp  full_map_exporter.h  image_buffer.cpp  image_buffer.h  image_geometry.h  image_pipeline.cpp  image_pipeline.h  image_registration.cpp  image_registration.h  layout_renderer.cpp  layout_renderer.h  png_stream_writer.cpp  png_stream_writer.h  seam_analyzer.cpp  seam_analyzer.h
src/io/: atomic_file.cpp  atomic_file.h
src/ipc/: desktop_ipc.cpp  desktop_ipc.h
src/model/: chunk_coord.h  layout_state.h  project.h  project_config.h  project_document.cpp  project_document.h
src/project/: project_paths.cpp  project_paths.h  project_repository.cpp  project_repository.h  project_service.cpp  project_service.h  project_session.cpp  project_session.h  prompt_authoring_guide.h.in
src/ui/: map_geometry.cpp  map_geometry.h
tests/: CMakeLists.txt  cli_json_contract_test.cmake  cli_without_desktop_test.cmake  ipc_test_host.cpp  phase2_cli_test.cmake  phase3_cli_test.cmake  test_command_system.cpp  test_concept_comparison.cpp  test_full_map_export.cpp  test_golden_images.cpp  test_image_pipeline.cpp  test_image_registration.cpp  test_layout_renderer.cpp  test_map_zoom.cpp  test_phase6_architecture.cpp  test_project_service.cpp  test_version.cpp
tests/golden/: composite_3x3.txt  template_four_sides.txt
